# aprendi-na-DIO

./: .gitignore  README.md  index.html  index1.html
1 GIT/: README.md
3 CSS/: trilha-css-desafio-01.url
HTML/: index.html
Luizalabs - Back-end com Python/P3  - Desenvolvendo sua Primeira API com FastAPI, Python e Docker/: main.py  pyproject.toml  readme.md
Luizalabs - Back-end com Python/P3  - Desenvolvendo sua Primeira API com FastAPI, Python e Docker/controllers/: atletas.py  categorias.py  centros_treinamento.py  database.py  readme.md  teste.py
Luizalabs - Back-end com Python/P3  - Desenvolvendo sua Primeira API com FastAPI, Python e Docker/database/: connection.py  create_db.py  readme.md  workout.db
Luizalabs - Back-end com Python/P3  - Desenvolvendo sua Primeira API com FastAPI, Python e Docker/models/: atletas.py  categorias.py  centros_treinamento.py  readme.md
Luizalabs - Back-end com Python/P3  - Desenvolvendo sua Primeira API com FastAPI, Python e Docker/schemas/: atletas.py  categorias.py  centros_treinamento.py  readme.md
Luizalabs - Back-end com Python/P3  - Desenvolvendo sua Primeira API com FastAPI, Python e Docker/services/: atletas.py  categorias.py  centros_treinamento.py  readme.md
Luizalabs - Back-end com Python/P3  - Desenvolvendo sua Primeira API com FastAPI, Python e Docker/views/: readme.md
Luizalabs - Back-end com Python/P4 - Criando sua API Bancária Assíncrona com FastAPI/: pyproject.toml  readme.md  sistemabancario.db  tests.db
Luizalabs - Back-end com Python/P4 - Criando sua API Bancária Assíncrona com FastAPI/migration/: env.py
(+176 files in other folders)
