[project]
name = "workout-api"
version = "0.1.0"
description = "Projeto workout_api proposto pela DIO na trilha de back-end"
authors = [
    {name = "Erick Sasaki",email = "erick_sasaki@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
